plugins/kube-ad-auth/kube-ad-auth.yaml
---

kind: Service
apiVersion: v1
metadata:
  name:  kube-ad-auth
  namespace: kube-system
  labels:
    name:  kube-ad-auth
spec:
  selector:
    name:  kube-ad-auth
  ports:
  -   name: public
      port: 23456
      targetPort: 8888

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-ad-auth
spec:
  tls:
    - secretName: kube-ad-auth-tls
      hosts: [logon.cluster.local]
  rules:
    - host: logon.cluster.local
      http:
        paths:
        - path: /authenticate
          backend:
            serviceName: kube-ad-auth
            servicePort: 23456

---

apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kube-ad-auth
  namespace: kube-system
spec:
  selector:
    matchLabels:
      name: kube-ad-auth
  template:
    metadata:
      labels:
        name: kube-ad-auth
      annotations:
        scheduler.alpha.kubernetes.io/critical-pod: ""
        prometheus.io/scrape: "true"
        prometheus.io/port: "8888"
        #prometheus.io/scheme: https
    spec:
      serviceAccountName: kube-ad-auth
      hostNetwork: true
      containers:
      - name: kube-ad-auth
        image: "hub.global.cloud.sap/monsoon/kube-ad-auth:latest"
        args:
        - kube-ad-auth
        - server
        - --alsologtostderr=true
        - --logtostderr
        - --ldap-skip-tls-verify
        - --ldap-host=ldap.staging.cloud.sap
        - --ldap-port=636
        - --ldap-user-base-dn=OU=Identities,DC=ad,DC=staging,DC=cloud,DC=sap
        - --ldap-user-attribute=cn
        - --ldap-bind-dn=CN=cp-auth-service,CN=Users,DC=ad,DC=staging,DC=cloud,DC=sap
        - --ldap-bind-password=KDrfWg92xX28NuvB
        - --ldap-access-filter=(memberOf=CN=CP_CONV_K8S_USERS,OU=Permissions,OU=CCloud,DC=ad,DC=staging,DC=cloud,DC=sap)
        - --ldap-group-mapping="CN=CP_CONV_K8S_USERS,OU=Permissions,OU=CCloud,DC=ad,DC=staging,DC=cloud,DC=sap:viewers"
        - --ldap-group-mapping="CN=CP_CONV_K8S_ADMINS,OU=Permissions,OU=CCloud,DC=ad,DC=staging,DC=cloud,DC=sap:admins"
        - --ldap-group-mapping="CN=CP_CONV_K8S_CLUSTER_ADMINS,OU=Permissions,OU=CCloud,DC=ad,DC=staging,DC=cloud,DC=sap:cluster-admins"
        - --server-port=8888
        #- --tls-enabled=true
        #- --tls-cert-file=/etc/kubernetes/kube-ad-auth/kube-ad-auth.pem
        #- --tls-private-key-file=/etc/kubernetes/kube-ad-auth/kube-ad-auth-key.pem
        - --kubeconfig-pregenerated=true
        - --token-signing-certificate=/etc/kubernetes/kube-ad-auth/signing/signing.crt
        - --token-signing-private-key=/etc/kubernetes/kube-ad-auth/signing/signing.key
        - --v=3
        ports:
        - containerPort: 8888
        resources:
          limits:
            cpu: 100m
            memory: 150Mi
          requests:
            cpu: 50m
            memory: 90Mi
        volumeMounts:
        - mountPath: /etc/kubernetes/ssl
          name: etc-kubernetes-ssl
          readOnly: true
        - name: kube-ad-auth
          mountPath: /etc/kubernetes/kube-ad-auth/
        - name: kube-ad-auth-signing
          mountPath: /etc/kubernetes/kube-ad-auth/signing
          readOnly: true
        livenessProbe:
          httpGet:
            path: /health
            port: 8888
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
      volumes:
      - name: etc-kubernetes-ssl
        hostPath:
          path: /etc/kubernetes/ssl
      - name: kube-ad-auth
        hostPath:
          path: /etc/kubernetes/kube-ad-auth/
      - name: kube-ad-auth-signing
        secret:
          secretName: kube-ad-auth-signing
          defaultMode: 0555
